--- a/procesTorrents/procesTorrents.csproj
+++ b/procesTorrents/procesTorrents.csproj
@@ -46,6 +46,7 @@
     <Compile Include="LogFile.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RestCommunicator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
